kubeflow/jupyter/jupyter-web-app/upstream/base/route.yaml
# prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jupyter-web-app
  namespace: argo-cd  # 与 Prometheus 服务同命名空间（可选，也可在其他命名空间）
spec:
  parentRefs:
  - name: https  # 关联上一步创建的 Gateway
    namespace: istio-system  # Gateway 所在的命名空间
  hostnames:
  - "jupyter-web-app.bei.com"  # 外部访问的域名（需解析到集群节点 IP）
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /  # 匹配所有路径
    backendRefs:
    - name: jupyter-web-app-service
      namespace: kubeflow  # 服务所在命名空间
      port: 80
